# trade-analyzer-light

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
btst/: HOW_IT_WORKS.md  __init__.py  backtest.py  convergence.py  explanations.py  regime.py  scanner.py
btst/reports/: backtest_2026-02-23.md  backtest_2026-02-23_to_2026-02-26.md  backtest_2026-02-24.md  backtest_2026-02-25.md  backtest_2026-02-26.md  btst_2026-02-27.md
common/: __init__.py  analysis_cache.py  data.py  data_cache.py  db.py  db_maintenance.py  display.py  indicators.py  journal.py  llm.py  market.py  news.py  risk.py  universe.py  universe.yaml  universe_guide.md  upstox.py  upstox_symbols.py
intra_week/: HOW_IT_WORKS.md  __main__.py  backtest.py  backtest_report.py  convergence.py  explanations.py  scanner.py  scoring.py  strategies.py  weekly_context.py
intraday/: HOW_IT_WORKS.md  TRADE_PLAN_PROMPT.md  __init__.py  backtest.py  backtest_report.py  config_check.py  convergence.py  cycle_analysis_2026-03.md  explanations.py  features.py  market_data.py  mlr_config.py  mlr_config.yaml  mlr_config_guide.md  mlr_stats.py  outlook.py  output.py  phases.py  regime.py  scanner.py  scoring.py  strategies.py
intraday/reports/: intraday_2026-03-02_1139.md
intraday/strategies/: __init__.py  _common.py  compression.py  mean_revert.py  mlr.py  orb.py  (+2 more)
migrations/: 001_create_tables.sql  002_upstox_tables.sql  003_timescaledb.sql
scalp/: HOW_IT_WORKS.md  __init__.py  backtest.py  config.py  report.py  scalp_config.yaml  scalp_config_guide.md  scanner.py
scripts/: backfill_ohlcv.py
(+1 files in other folders)
